# footnote

./: .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  README.md  RELEASE.md  input.css  ios.app.entitlements  ios.info.plist  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug.md  documentation-request.md  feature_request.md  fix.md  genericworkticket.md  use-case.md
.github/workflows/: bundle.yml  release.yml  rust.yml  unittest.yml
apps/footnote/: Cargo.toml  Dioxus.toml
apps/footnote-cli/: Cargo.toml  README.md  commands.rs  main.rs
apps/footnote-cli/tests/: all.sh  primary.sh  replicate.sh  secondary.sh  share.sh
apps/footnote-mobile/: .gitignore  Cargo.toml  ios.entitlements.plist  mobile.toml
apps/footnote-mobile/assets/: tailwind.css
apps/footnote-mobile/icons/: generate_icons.sh
apps/footnote-mobile/platform_build/: dx_android_release.sh
apps/footnote-mobile/src/: lib.rs
apps/footnote-mobile/src/platform/: mod.rs  stub.rs
apps/footnote-ui/: Cargo.toml  package.json
apps/footnote-ui/assets/: main.css
apps/footnote-ui/platform_build/: AndroidManifest.xml  dx_android_filepaths.sh  dx_android_release.sh  file_paths.xml
apps/footnote-ui/src/: config.rs  context.rs  lib.rs  main.rs
apps/footnote-ui/src/components/: app_menu.rs  confirm_dialog.rs  footnotes.rs  listen_for_pair_modal.rs  pair_with_listening_device_modal.rs  share_my_contact_modal.rs  sync_service_toggle.rs
apps/footnote-ui/src/elements/: mod.rs  primary_button.rs
apps/footnote-ui/src/platform/: default.rs  ios.rs  mod.rs  stub.rs
apps/footnote-ui/src/views/: contact_view.rs  note_view.rs
apps/footnote/icons/: icon.icns
apps/footnote/platform_build/: AndroidManifest.xml  dx_android_filepaths.sh  dx_android_release.sh
apps/footnote/src/: context.rs  lib.rs  sync_status_context.rs
apps/footnote/src/app/: mod.rs  route.rs
apps/footnote/src/app/body/: contact.rs  home.rs  mod.rs  profile.rs
apps/footnote/src/app/body/home/: mod.rs  sync_activity.rs
apps/footnote/src/app/body/note/: footnote_editor.rs  footnotes.rs  mod.rs  share_dropdown.rs
apps/footnote/src/app/body/note_read/: mod.rs
apps/footnote/src/app/header/: file_search.rs  menu.rs  mod.rs  sync_service_toggle.rs
apps/footnote/src/app/modal/: confirm_modal.rs  import_contact_modal.rs  listen_for_pair_modal.rs  mod.rs  new_note_modal.rs  note_browser_modal.rs  open_note_modal.rs  pair_with_listening_device_modal.rs  share_my_contact_modal.rs
apps/footnote/src/components/: file_search.rs  footnote_editor.rs  listen_for_pair_modal.rs  new_note_modal.rs  path_input.rs  share_my_contact_modal.rs
apps/footnote/src/context/: app_context.rs  menu_context.rs  mod.rs  sync_status_context.rs
apps/footnote/src/platform/: default.rs  mod.rs
apps/footnote/src/views/: mod.rs  profile_view.rs
assets/: main.css  tailwind.css
assets/styling/: main.css
design/: browser.html  browser.rsx  contact.html  contact.rsx  device_row.rsx  device_status_row.html  file_browser.html  file_browser.rsx  file_browser_tw_pretty.html  footnotes.html  footnotes.rs  layout.html  layout.md  layout_translated.rsx  note.html  note.rsx
docs/: users.md
icons/: icon.html
libs/footnote-core/: Cargo.toml
libs/footnote-core/src/: lib.rs  platform.rs
libs/footnote-core/src/model/: contact.rs  note.rs  user.rs  vault.rs
libs/footnote-core/src/service/: mod.rs  sync_service.rs
libs/footnote-core/src/util/: crypto.rs  filesystem.rs  lamport_timestamp.rs  manifest.rs  mod.rs  network.rs  sync_status_record.rs  tombstone.rs  transfer.rs  tree_node.rs
packaging/: dx_prebuild.sh
platform_build/: AndroidManifest.xml  MainActivity.kt  dx_android_release.sh  dx_prebuild.sh  ios.info.plist
prototype/components/: command_palette.rs  contact.rs  mod.rs  nav_menu_item.rs
prototype/screens/: editor.rs  profile.rs
prototype/screens/vault_setup/: browser.rs  needed.rs  open.rs
src/: app.rs  config.rs  context.rs  lib.rs  main.rs  plaintext.rs
src/cli/: README.md  commands.rs
src/components/: app_header.rs  app_menu.rs  button.rs  command_palette.rs  device_add_flow.rs  device_list_item.rs  directoy_browser.rs  file_search.rs  file_service_toggle.rs  footnote_editor.rs  footnotes.rs  fuzzy_file_select.rs  hero.rs  icons.rs  import_contact_modal.rs  include_device_modal.rs  listen_for_pair_modal.rs  mod.rs  navbar.rs  new_note_modal.rs  plaintext.rs  share_my_contact_modal.rs  slide_over_menu.rs  sync_service_toggle.rs  title_input.rs
src/core/: crypto.rs  device.rs  hq.rs  init.rs  manifest.rs  mirror.rs  mod.rs  note.rs  sync.rs  user.rs  vault.rs
src/model/: contact.rs  device.rs  keypair.rs  lamport_timestamp.rs  manifest.rs  mod.rs  note.rs  user.rs  vault.rs  vault_archive.rs  vector_time.rs
src/platform/: android.rs  ios.rs  mod.rs
src/screens/vault_setup/: create.rs  join.rs
src/service/: join_service.rs  mod.rs  replica_service.rs  share_service.rs  sync_service.rs
src/ui/: app.rs  app_slop.rs  config.rs  context.rs  markdown.rs  mod.rs  plaintext.rs
src/ui/components/: command_palette.rs  footnote_button.rs  icons.rs  listen_button.rs  mod.rs  new_contact.rs  slide_over_menu.rs
src/ui/screens/: contacts.rs  editor.rs  mod.rs  profile.rs  sync.rs
src/ui/screens/vault_setup/: browser.rs  create.rs  join.rs  mod.rs  needed.rs  open.rs
src/ui/views/: editor.rs  navbar.rs  profile.rs  vault.rs
src/util/: crypto.rs  filesystem.rs  lamport_timestamp.rs  manifest.rs  mod.rs  network.rs  sync_status_record.rs  transfer.rs  tree_node.rs
src/views/: browse.rs  contact_browser.rs  contact_view.rs  contacts.rs  edit.rs  editor.rs  mod.rs  navbar.rs  note_browser.rs  note_view.rs  profile.rs  profile_view.rs  vault.rs  vault_join.rs
tests/: all.sh  contact.sh  device_join_test.sh  hq_create_test.sh  hq_outpost_sync_test.sh  hq_outpost_test.sh  init_test.sh  integration_test.sh  mirror_sync_test.sh  replicate.sh  secondary.sh  selective_sharing_test.sh  share.sh  share_test.sh  sync.sh
