[package]
name = "footnote"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
bincode = "2.0.1"
blake3 = "1.8.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
futures = "0.3.31"
hex = "0.4"
iroh = "0.95"
n0-error = { version = "0.1.2", features = ["anyhow"] }
n0-future = "0.3.1"
rand = "0.9.2"
rand_core = "0.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = "1.48.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
walkdir = "2.5.0"
dioxus = { version = "0.7.1", features = [] }

[features]
default = ["ui-desktop"]
cli = []

ui-web = ["dioxus/web"]
ui-desktop = ["dioxus/desktop"]
ui-mobile = ["dioxus/mobile"]

[[bin]]
name = "footnote"
path = "src/main.rs"
required-features = ["ui-desktop"]

[[bin]]
name = "footnote-cli"
path = "src/bin/cli.rs"
required-features = ["cli"]