[package]
name = "footnote"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
bincode = "2.0.1"
blake3 = "1.8.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
fuzzy-matcher = "0.3"
pulldown-cmark = "0.12"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
futures = "0.3.31"
hex = "0.4"
iroh = "0.95"
n0-error = { version = "0.1.2", features = ["anyhow"] }
n0-future = "0.3.1"
rand = "0.9.2"
rand_core = "0.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = "1.48.0"
tokio-util = "0.7"
uuid = { version = "1.11", features = ["v4", "serde"] }
walkdir = "2.5.0"
dioxus = { version = "0.7.2", features = [] }
tracing = "0.1"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
cli = []

[[bin]]
name = "footnote-cli"
path = "src/bin/cli.rs"
required-features = ["cli"]