[package]
name = "footnote-cli"
version = "0.3.0"
edition = "2024"

[[bin]]
name = "footnote-cli"
path = "main.rs"

[dependencies]
footnote-core = { path = "../../libs/footnote-core" }

clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
