[package]
name = "footnote_mobile"
version = "0.3.0"
authors = ["Nate Hardt <nhardt@footnote.wiki>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "footnote_mobile_desktop"
path = "gen/bin/desktop.rs"

[package.metadata.cargo-android]
app-activity-name = "wiki.footnote.app.MainActivity"
app-dependencies = [
    "androidx.webkit:webkit:1.6.1",
    "androidx.appcompat:appcompat:1.6.1",
    "com.google.android.material:material:1.8.0",
]
project-dependencies = [ "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21" ]
app-plugins = [ "org.jetbrains.kotlin.android" ]
app-permissions = [ "android.permission.INTERNET" ]
app-theme-parent = "Theme.MaterialComponents.DayNight.DarkActionBar"
vulkan-validation = false

[package.metadata.cargo-android.env-vars]
WRY_ANDROID_PACKAGE = "wiki.footnote.app"
WRY_ANDROID_LIBRARY = "footnote_mobile"
WRY_ANDROID_KOTLIN_FILES_OUT_DIR = "<android-project-dir>/app/src/main/kotlin/wiki/footnote/app"

[package.metadata.cargo-apple.ios]
frameworks = [ "WebKit" ]

[dependencies]
anyhow = "1.0"
log = "0.4"
wry = "0.53"
tao = "0.26"
dioxus = { version = "0.7.3", features = ["mobile"] }
footnote-ui = { path = "../footnote-ui", default-features = false, features = ["mobile"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
jni = "0.21.0"
paste = "1.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.9.0"

[target.'cfg(target_os = "ios")'.dependencies]
core-foundation = "0.10"
